testsuite/tests/deriving/should_fail/drvfail-foldable-traversable1.stderr

drvfail-foldable-traversable1.hs:17:22: error: [GHC-16437]
    • Can't make a derived instance of ‘Foldable Infinite’:
        Constructor ‘Infinite’ must not contain function types
    • In the data declaration for ‘Infinite’

drvfail-foldable-traversable1.hs:21:22: error: [GHC-16437]
    • Can't make a derived instance of ‘Traversable (Cont r)’:
        Constructor ‘Cont’ must not contain function types
    • In the data declaration for ‘Cont’
